--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -3,46 +3,40 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:34:21.497013Z",
-     "start_time": "2024-12-11T14:34:21.398274Z"
+     "end_time": "2024-12-12T04:55:23.065894Z",
+     "start_time": "2024-12-12T04:55:15.781129Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from torch.utils.data import Dataset\n",
     "import os\n",
-    "import sys\n",
     "import torch\n",
     "import tiktoken\n",
     "import sentencepiece as spm\n",
     "import subprocess\n",
-    "from tiktoken import _tiktoken as tk\n",
+    "\n",
     "import nltk\n",
-    "\n",
-    "# nltk.download('stopwords')\n",
-    "# nltk.download('punkt')\n",
-    "\n",
-    "from nltk.corpus import stopwords\n",
     "\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F"
    ],
    "id": "f9a7e8aa1b3814ff",
    "outputs": [],
-   "execution_count": 308
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:34:20.895433Z",
-     "start_time": "2024-12-10T16:34:20.886778Z"
+     "end_time": "2024-12-12T04:55:23.070787Z",
+     "start_time": "2024-12-12T04:55:23.068075Z"
     }
    },
    "cell_type": "code",
    "source": "# !pip freeze > requirements.txt",
    "id": "e67ac312e97d42f",
    "outputs": [],
-   "execution_count": 202
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -97,8 +91,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:34:20.907773Z",
-     "start_time": "2024-12-10T16:34:20.899031Z"
+     "end_time": "2024-12-12T04:55:23.081299Z",
+     "start_time": "2024-12-12T04:55:23.074188Z"
     }
    },
    "cell_type": "code",
@@ -120,43 +114,43 @@
    ],
    "id": "359f1802d1cc1390",
    "outputs": [],
-   "execution_count": 203
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:34:20.913768Z",
-     "start_time": "2024-12-10T16:34:20.911097Z"
+     "end_time": "2024-12-12T04:55:23.087454Z",
+     "start_time": "2024-12-12T04:55:23.084450Z"
     }
    },
    "cell_type": "code",
    "source": "# check_requirements()",
    "id": "37422fc4f98dd644",
    "outputs": [],
-   "execution_count": 204
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:44:59.370845Z",
-     "start_time": "2024-12-10T16:44:58.606620Z"
+     "end_time": "2024-12-12T04:55:23.093466Z",
+     "start_time": "2024-12-12T04:55:23.089720Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "if os.path.exists(\"Dataset.txt\"):\n",
+    "if not os.path.exists(\"Dataset.txt\"):\n",
     "    os.system(\"wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\")\n",
     "    os.rename(\"input.txt\", 'Dataset.txt')"
    ],
    "id": "fe02f43f8fac14da",
    "outputs": [],
-   "execution_count": 219
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:49:56.664851Z",
-     "start_time": "2024-12-11T14:49:56.541581Z"
+     "end_time": "2024-12-12T04:55:23.106816Z",
+     "start_time": "2024-12-12T04:55:23.095679Z"
     }
    },
    "cell_type": "code",
@@ -208,6 +202,9 @@
     "        elif self.mode == \"tiktoken\":\n",
     "            return self.enc.decode(tokens)\n",
     "\n",
+    "    def get_vocab_size(self):\n",
+    "        return self.vocab_size\n",
+    "\n",
     "    def __len__(self):\n",
     "        return self.vocab_size\n",
     "\n",
@@ -221,13 +218,13 @@
    ],
    "id": "7bba9bcbc5272509",
    "outputs": [],
-   "execution_count": 323
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:49:56.835683Z",
-     "start_time": "2024-12-11T14:49:56.772927Z"
+     "end_time": "2024-12-12T04:55:23.120360Z",
+     "start_time": "2024-12-12T04:55:23.111653Z"
     }
    },
    "cell_type": "code",
@@ -276,13 +273,13 @@
      ]
     }
    ],
-   "execution_count": 324
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:50:07.087335Z",
-     "start_time": "2024-12-11T14:49:57.886531Z"
+     "end_time": "2024-12-12T04:55:32.844269Z",
+     "start_time": "2024-12-12T04:55:23.125641Z"
     }
    },
    "cell_type": "code",
@@ -293,25 +290,25 @@
    ],
    "id": "3c69851ade7e8691",
    "outputs": [],
-   "execution_count": 325
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:30.541227Z",
-     "start_time": "2024-12-11T14:51:28.442669Z"
+     "end_time": "2024-12-12T04:55:33.982442Z",
+     "start_time": "2024-12-12T04:55:32.848251Z"
     }
    },
    "cell_type": "code",
    "source": [
     "print(\n",
-    "    f\"Normal encoding: Length of sequence = {len(char_dataset1.encode(train_text))}, Vocab size = {char_dataset1.__len__()}\")\n",
+    "    f\"Normal encoding: Length of sequence = {len(char_dataset1.encode(train_text))}, Vocab size = {char_dataset1.get_vocab_size()}\")\n",
     "\n",
     "print(\n",
-    "    f\"SentencePiece encoding: Length of sequence = {len(char_dataset2.encode(train_text))}, Vocab size = {char_dataset2.__len__()}\")\n",
+    "    f\"SentencePiece encoding: Length of sequence = {len(char_dataset2.encode(train_text))}, Vocab size = {char_dataset2.get_vocab_size()}\")\n",
     "\n",
     "print(\n",
-    "    f\"TikToken encoding: Length of sequence = {len(char_dataset3.encode(train_text))}, Vocab size = {char_dataset3.__len__()}\")"
+    "    f\"TikToken encoding: Length of sequence = {len(char_dataset3.encode(train_text))}, Vocab size = {char_dataset3.get_vocab_size()}\")"
    ],
    "id": "8dca0b7739b1d395",
    "outputs": [
@@ -325,13 +322,13 @@
      ]
     }
    ],
-   "execution_count": 327
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:41.658374Z",
-     "start_time": "2024-12-11T14:51:41.171615Z"
+     "end_time": "2024-12-12T04:55:34.275311Z",
+     "start_time": "2024-12-12T04:55:33.984478Z"
     }
    },
    "cell_type": "code",
@@ -406,13 +403,13 @@
      ]
     }
    ],
-   "execution_count": 328
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:49.361884Z",
-     "start_time": "2024-12-11T14:51:48.731877Z"
+     "end_time": "2024-12-12T04:55:34.689321Z",
+     "start_time": "2024-12-12T04:55:34.277689Z"
     }
    },
    "cell_type": "code",
@@ -531,13 +528,13 @@
      ]
     }
    ],
-   "execution_count": 329
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:55.720925Z",
-     "start_time": "2024-12-11T14:51:55.706234Z"
+     "end_time": "2024-12-12T04:55:34.694434Z",
+     "start_time": "2024-12-12T04:55:34.691268Z"
     }
    },
    "cell_type": "code",
@@ -549,13 +546,13 @@
    ],
    "id": "b42876778837d857",
    "outputs": [],
-   "execution_count": 330
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:56.042542Z",
-     "start_time": "2024-12-11T14:51:56.035580Z"
+     "end_time": "2024-12-12T04:55:34.700825Z",
+     "start_time": "2024-12-12T04:55:34.696528Z"
     }
    },
    "cell_type": "code",
@@ -576,13 +573,13 @@
      ]
     }
    ],
-   "execution_count": 331
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:56.433033Z",
-     "start_time": "2024-12-11T14:51:56.387161Z"
+     "end_time": "2024-12-12T04:55:34.725016Z",
+     "start_time": "2024-12-12T04:55:34.702619Z"
     }
    },
    "cell_type": "code",
@@ -604,13 +601,13 @@
      ]
     }
    ],
-   "execution_count": 332
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:56.912847Z",
-     "start_time": "2024-12-11T14:51:56.905601Z"
+     "end_time": "2024-12-12T04:55:34.733873Z",
+     "start_time": "2024-12-12T04:55:34.727079Z"
     }
    },
    "cell_type": "code",
@@ -637,13 +634,13 @@
      ]
     }
    ],
-   "execution_count": 333
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:57.762036Z",
-     "start_time": "2024-12-11T14:51:57.674273Z"
+     "end_time": "2024-12-12T04:55:34.766801Z",
+     "start_time": "2024-12-12T04:55:34.736235Z"
     }
    },
    "cell_type": "code",
@@ -689,20 +686,107 @@
      ]
     }
    ],
-   "execution_count": 334
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T14:51:58.532403Z",
-     "start_time": "2024-12-11T14:51:58.512524Z"
+     "end_time": "2024-12-12T05:07:00.898684Z",
+     "start_time": "2024-12-12T05:07:00.863524Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "\n",
+    "\n",
+    "class BigramLangModel(nn.Module):\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.token_embedding = nn.Embedding(vocab_size, vocab_size)\n",
+    "\n",
+    "    def forward(self, indices, targets=None):\n",
+    "        logits = self.token_embedding(indices)  # B = batch_size,T = context_length, C= vocab_size\n",
+    "\n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            loss = F.cross_entropy(logits.view(B * T, C), targets.view(B * T))\n",
+    "\n",
+    "        return logits, loss\n",
+    "\n",
+    "    def generate(self, init_token, max_new_tokens):\n",
+    "        sequence = init_token\n",
+    "        for itr in range(max_new_tokens):\n",
+    "            logits, loss = self(sequence)\n",
+    "            logits = logits[:, -1, :]\n",
+    "            probs = F.softmax(logits, dim=-1)\n",
+    "            next_token = torch.multinomial(probs, num_samples=1)\n",
+    "            # next_token = torch.argmax(probs, dim=-1)\n",
+    "            # next_token = next_token.unsqueeze(1)\n",
+    "            sequence = torch.cat((sequence, next_token), dim=1)\n",
+    "        return sequence\n",
+    "\n",
+    "\n",
+    "m = BigramLangModel(char_dataset1.get_vocab_size())\n",
+    "logits, loss = m(xb, yb)\n",
+    "print(logits.shape)\n",
+    "print(loss)\n",
+    "initial_token = torch.tensor(char_dataset1.encode('\\n'), dtype=torch.long).unsqueeze(0)\n",
+    "# 0 == new line char\n",
+    "print(\n",
+    "    f\"Generated Sequence : {char_dataset1.decode(m.generate(init_token=initial_token, max_new_tokens=100)[0].tolist())}\")"
+   ],
    "id": "f8a41f136360200c",
-   "outputs": [],
-   "execution_count": 335
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 8, 65])\n",
+      "tensor(4.8786, grad_fn=<NllLossBackward0>)\n",
+      "Generated Sequence : \n",
+      "Sr?qP-QWktXoL&jLDJgOLVz'RIoDqHdhsV&vLLxatjscMpwLERSPyao.qfzs$Ys$zF-w,;eEkzxjgCKFChs!iWW.ObzDnxA Ms$3\n"
+     ]
+    }
+   ],
+   "execution_count": 62
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T05:00:44.637674Z",
+     "start_time": "2024-12-12T05:00:43.362444Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "xb2, yb2 = get_batch(train_data2)\n",
+    "m2 = BigramLangModel(char_dataset2.get_vocab_size())\n",
+    "logits, loss = m2(xb2, yb2)\n",
+    "print(logits.shape)\n",
+    "print(loss)\n",
+    "initial_token = torch.tensor(char_dataset2.encode('I Love You'), dtype=torch.long).unsqueeze(0)\n",
+    "\n",
+    "print(\n",
+    "    f\"Generated Sequence : {char_dataset2.decode(m2.generate(indices=initial_token, max_new_tokens=100)[0].tolist())}\")"
+   ],
+   "id": "c6758d9f31d26673",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 8, 10770])\n",
+      "tensor(9.9281, grad_fn=<NllLossBackward0>)\n",
+      "Generated Sequence : I Love You contewould RevoltALO First ample cry tideitted courage jade Whestuff Coyingbeseem Giv Despis exclaimscheshysicpipe dashovato spectatorssati interruptrgetfive kinsmenband unwa provinc growpierce arise Dick Suppl fare fatThat praisestcheryank inducedzard swim Pluck nowertake attireabsolve lead doth scornmi Monday orphan trudge lies fea qua Ea gulf dreadfulbaby lad Love Beggarsting knock chafeitedentiies kindred sitting parleGood valour oceanstateRAN scourabble cloudedper wedlock unre agreed emptiebo thereof does unfe perfume Hast cormorantMore uncl\n"
+     ]
+    }
+   ],
+   "execution_count": 46
   },
   {
    "metadata": {},
@@ -710,7 +794,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "d60740603688da29"
+   "id": "37256f6942f4d361"
   }
  ],
  "metadata": {
